WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199394
REGRESSION (
r243240
): Unable to swipe back in Safari
https://bugs.webkit.org/show_bug.cgi?id=199394
Summary
REGRESSION (r243240): Unable to swipe back in Safari
Tim Horton
Reported
2019-07-01 20:08:01 PDT
REGRESSION (
r243240
): Unable to swipe back in Safari
Attachments
Patch
(3.86 KB, patch)
2019-07-01 20:08 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(4.41 KB, patch)
2019-07-02 13:43 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2019-07-01 20:08:09 PDT
Created
attachment 373302
[details]
Patch
Tim Horton
Comment 2
2019-07-01 20:08:10 PDT
<
rdar://problem/51137447
>
Chris Dumez
Comment 3
2019-07-01 20:19:31 PDT
Comment on
attachment 373302
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=373302&action=review
> Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:-1900 > - _gestureController = nullptr;
So we do not even need a call to _gestureController->disconnectFromProcess() ?
Tim Horton
Comment 4
2019-07-01 22:08:12 PDT
(In reply to Chris Dumez from
comment #3
)
> Comment on
attachment 373302
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=373302&action=review
> > > Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:-1900 > > - _gestureController = nullptr; > > So we do not even need a call to _gestureController->disconnectFromProcess() > ?
Hmm, I don't think so? The connect just bails and all is well (and they communicate by pageID so things just fall back into place. I'll check if it's safe to disconnect and if it is we'll do that just for safety/readability's sake, though.
Tim Horton
Comment 5
2019-07-02 13:43:17 PDT
Created
attachment 373356
[details]
Patch
Chris Dumez
Comment 6
2019-07-02 14:19:39 PDT
Comment on
attachment 373356
[details]
Patch LGTM too.
WebKit Commit Bot
Comment 7
2019-07-02 15:04:16 PDT
Comment on
attachment 373356
[details]
Patch Clearing flags on attachment: 373356 Committed
r247073
: <
https://trac.webkit.org/changeset/247073
>
WebKit Commit Bot
Comment 8
2019-07-02 15:04:18 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug