REGRESSION (r243240): Unable to swipe back in Safari https://bugs.webkit.org/show_bug.cgi?id=199394 <rdar://problem/51137447>

Reviewed by Wenson Hsieh.

Source/WebKit:

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _processDidExit]):
r243240 started nilling out the ViewGestureController, but we don't actually
expect that; the only time WKWebView's ViewGestureController goes away
is if the client turns off the gestures... and so nothing ever puts it back.
Instead, just always disconnect, don't nil it out.

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:
Make sure that we actually end up with swipe gesture recognizers installed
after process swap and crash.


Canonical link: https://commits.webkit.org/213345@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247073 268f45cc-cd09-0410-ab3c-d52691b4dbfc